test_suite/tests/errors/banishdispatch_on_nonenum.rs
use banish::banish;
use banish::BanishDispatch;

#[derive(BanishDispatch)]
struct MyStruct {
    name: string
}